--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,34 @@
 Package: JAGStree
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Automatically Write JAGS Code for Hierarchical Bayesian Models on Trees
+Version: 1.0.0
+Author: Mallory J Flynn
+Maintainer: The package maintainer <mallory.flynn@stat.ubc.ca>
+Description: When relationships between sources of data can be represented 
+    by a tree, the generation of appropriate MCMC modelling code to be used 
+    with JAGS to run a Bayesian hierarchical model can be automatically generated 
+    by this package. 
+    Any admissible tree-structured data can be used, under the assumption that 
+    node counts are multinomial and branching probabilities are Dirichlet among 
+    sibling groups.
+License: GPL (>= 2)
+URL: https://github.com/malfly/JAGStree
+Depends:
+    R (>= 4.3.0)
+Imports: 
+    data.tree,
+    gtools,
+    mcmcplots,
+    stats,
+    R2jags,
+    tidyverse,
+    AutoWMM
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.1
+VignetteBuilder: knitr
+Config/testthat/edition: 3
