--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,12 @@ Package: JAGStree
 Type: Package
 Title: Automatically Write JAGS Code for Hierarchical Bayesian Models on Trees
 Version: 1.0.0
-Author: Mallory J Flynn
+Authors@R: person("Mallory J", "Flynn", email = "mallory.flynn@stat.ubc.ca", role = c("cre", "aut"))
 Maintainer: The package maintainer <mallory.flynn@stat.ubc.ca>
 Description: When relationships between sources of data can be represented 
     by a tree, the generation of appropriate MCMC modelling code to be used 
     with JAGS to run a Bayesian hierarchical model can be automatically generated 
-    by this package. 
-    Any admissible tree-structured data can be used, under the assumption that 
+    by this package. Any admissible tree-structured data can be used, under the assumption that 
     node counts are multinomial and branching probabilities are Dirichlet among 
     sibling groups.
 License: GPL (>= 2)
