--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,10 @@ Version: 1.0.0
 Authors@R: person("Mallory J", "Flynn", email = "mallory.flynn@stat.ubc.ca", role = c("cre", "aut"))
 Maintainer: Mallory J Flynn <mallory.flynn@stat.ubc.ca>
 Description: When relationships between sources of data can be represented 
-    by a tree, the generation of appropriate Markov Chain Monte Carlo modelling code to be used 
+    by a tree, the generation of appropriate Markov Chain Monte Carlo modeling code to be used 
     with JAGS to run a Bayesian hierarchical model can be automatically generated 
     by this package. Any admissible tree-structured data can be used, under the assumption that 
-    node counts are multi-nomial and branching probabilities are Dirichlet among 
+    node counts are multinomial and branching probabilities are Dirichlet among 
     sibling groups.
 License: GPL (>= 2)
 URL: https://github.com/malfly/JAGStree
